- Fixed bug where only last input was getting sanitized - Added scroll bar for overflow on graph

--- a/style.css
+++ b/style.css
@@ -23,3 +23,7 @@ input {
 #dataInput {
     width: 90%;
 }
+
+#WaveDrom_Display_0 {
+    overflow-x: scroll;
+}
